# facepass

./: .gitignore  LICENSE  README.md  config.example.toml  main.py  pyproject.toml  requirements.txt  run.bat
.github/workflows/: update-test-annotation-summary.yml
dataset/: identities.csv
dataset/test/: annotation.json  annotations.jsonl
scripts/: analyze_threshold.py  check_celeba_leakage.py  check_runtime.py  download_models.py  eval_celeba.py  eval_end2end.py  eval_self.py  json2jsonl.py  launcher.py  preannotate_test.py  run_dev.py  summarize_test_annotations.py  visualize_embeddings.py
src/: __init__.py
src/backend/: __init__.py  api.py  config.py  dataset_import.py  dir_picker.py  gallery.py  recognizer.py  schemas.py
src/common/: __init__.py  errors.py  images.py  logging.py  retry.py
src/eval/: __init__.py  celeba_dataset.py  (+10 more)
tests/: test_annotation_summary_script.py  test_api.py  test_backend_config.py  test_celeba_dataset.py  test_celeba_script.py  test_check_runtime_script.py  test_common.py  test_dataset_import.py  test_dir_picker.py  test_end2end_dataset.py  test_end2end_evaluator.py  test_end2end_metrics.py  test_end2end_script.py  test_eval_metrics.py  test_evaluator.py  test_external_eval.py  test_fake_model_integration.py  test_frontend.py  test_gallery.py  test_insightface_model.py  test_json2jsonl_script.py  test_launcher.py  test_layer_boundaries.py  test_model_config.py  test_preannotate_script.py  test_real_model_smoke.py  test_recognizer.py  test_run_dev.py  test_self_dataset.py  test_threshold.py  test_visualize_embeddings.py
(+9 files in other folders)
