[project]
name = "facepass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "gradio>=6.15.2",
    "insightface>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "onnxruntime==1.22.1",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
    "uvicorn>=0.48.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
